# hemlis

./: .gitignore  Cargo.toml  flake.nix  release.sh  rust-toolchains.toml
.github/: copilot-instructions.md
lsp/: Cargo.toml
lsp/src/: main.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  nr.rs  parser.rs  style.rs
src/snapshots/: hemlis_lib__lexer__tests__escaped_backslash.snap  hemlis_lib__lexer__tests__funky_string.snap  hemlis_lib__lexer__tests__string.snap  hemlis_lib__lexer__tests__string_hex.snap  hemlis_lib__lexer__tests__string_with_break_and_escapes.snap  hemlis_lib__lexer__tests__weird_comment1.snap  hemlis_lib__lexer__tests__weird_comment2.snap  hemlis_lib__lexer__tests__weird_comment3.snap  hemlis_lib__lexer__tests__weird_comment4.snap  hemlis_lib__lexer__tests__weird_comment5.snap  hemlis_lib__lexer__tests__weird_comment6.snap  hemlis_lib__lexer__tests__weird_comment7.snap  hemlis_lib__lexer__tests__weird_comments.snap  hemlis_lib__parser__tests__do_block_fmap_array.snap  hemlis_lib__parser__tests__dubble_quals.snap  hemlis_lib__parser__tests__expr_do.snap  hemlis_lib__parser__tests__expr_messy.snap  hemlis_lib__parser__tests__expr_record.snap  hemlis_lib__parser__tests__expr_record_construct.snap  hemlis_lib__parser__tests__expr_record_update.snap  hemlis_lib__parser__tests__expr_record_update_full.snap  hemlis_lib__parser__tests__large_ints_in_type_sig.snap  hemlis_lib__parser__tests__minimal_a.snap  hemlis_lib__parser__tests__minimal_b.snap  hemlis_lib__parser__tests__minimal_d.snap  hemlis_lib__parser__tests__minimal_e.snap  hemlis_lib__parser__tests__minimal_g.snap  hemlis_lib__parser__tests__minimal_h.snap  hemlis_lib__parser__tests__negative_int_in_constraint.snap  hemlis_lib__parser__tests__typ_app.snap  hemlis_lib__parser__tests__typ_c_signature.snap  hemlis_lib__parser__tests__typ_row.snap
