workspace = { members = ["lsp"] }
[package]
name = "hemlis"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = { version = "0.14.2", features = [] }
rayon = "1.10.0"
hemlis_macros = { path = "hemlis_macros/" }
serde = { version = "1.0.215", features = [ "derive" ] }
tracing = "0.1.41"
papaya = "0.1.8"

[dev-dependencies]
insta = "1.40.0"
goldentests = "1.1"

[[bin]]
name = "hemlis"
path = "src/main.rs"

[lib]
name = "hemlis_lib"
path = "src/main.rs"
