[package]
name = "hemlis-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hemlis = { path = "../." }
dashmap = "6.1.0"
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.78", features = [] }
sungod = { version = "0.3.1", features = ["default_is_random"] }
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp-server = { version = "0.23.0", features = ["proposed"]}
futures = "0.3.31"
tracing = "0.1.41"
json-subscriber = "0.2.4"
tracing-subscriber = "0.3.19"
chrono = "0.4.39"
rayon = "1.10.0"
notify = "8"
